--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,8 @@ services:
         - 8080:8080
       volumes:
         - config:/config
+      environment:
+        - CADDY_API=
 
 volumes:
   config:
